awn1031/src/antlr/awn1027Parser.java
// Generated from F:\Fpaper\awn1027.g4 by ANTLR 4.1
package antlr;
 


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class awn1027Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, DATA=2, IF=3, ELSE=4, ELSEIF=5, ENDIF=6, INT=7, IP=8, BOOL=9, 
		VOID=10, IN=11, FORALL=12, SETOF=13, EVENT=14, EVENTT=15, PI=16, UPDATE=17, 
		UNICAST=18, BROADCAST=19, GROUPCAST=20, PARCOM=21, ARR=22, SEG=23, AND=24, 
		OR=25, PLU=26, SUB=27, MUL=28, DIV=29, ASS=30, EQ=31, LE=32, MO=33, NOTLE=34, 
		NOTMO=35, NOTEQ=36, NOT=37, NEG=38, LB=39, RB=40, LBB=41, RBB=42, LBBB=43, 
		RBBB=44, CO=45, ST=46, SE=47, ID=48, NUMBER=49, WS=50;
	public static final String[] tokenNames = {
		"<INVALID>", "'$'", "'data'", "'if'", "'else'", "'elseif'", "'endif'", 
		"'int'", "'ip'", "'bool'", "'void'", "'in'", "'forall'", "'setof'", "'<event>'", 
		"'</event>'", "'pi'", "'update'", "'unicast'", "'broadcast'", "'groupcast'", 
		"'|||'", "'->'", "'|'", "'&&'", "'||'", "'+'", "SUB", "'*'", "'/'", "'='", 
		"'=='", "'<'", "'>'", "'>='", "'<='", "'!='", "'!'", "NEG", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "','", "'.'", "';'", "ID", "NUMBER", "WS"
	};
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_processDef = 2, RULE_processTitle = 3, 
		RULE_eventExpr = 4, RULE_funcBlock = 5, RULE_type = 6, RULE_setName = 7, 
		RULE_typeName = 8, RULE_funcdefine = 9, RULE_paramDeclList = 10, RULE_paramDecl = 11, 
		RULE_block = 12, RULE_stmtList = 13, RULE_stmt = 14, RULE_setdefine = 15, 
		RULE_column = 16, RULE_ifStmt = 17, RULE_expr = 18, RULE_orExpr = 19, 
		RULE_andExpr = 20, RULE_equalityExpr = 21, RULE_comparisonExpr = 22, RULE_additiveExpr = 23, 
		RULE_multExpr = 24, RULE_notExpr = 25, RULE_negationExpr = 26, RULE_atom = 27, 
		RULE_var = 28, RULE_funcCall = 29, RULE_wsnFuncCall = 30, RULE_wsnEvent = 31, 
		RULE_paramList = 32;
	public static final String[] ruleNames = {
		"start", "program", "processDef", "processTitle", "eventExpr", "funcBlock", 
		"type", "setName", "typeName", "funcdefine", "paramDeclList", "paramDecl", 
		"block", "stmtList", "stmt", "setdefine", "column", "ifStmt", "expr", 
		"orExpr", "andExpr", "equalityExpr", "comparisonExpr", "additiveExpr", 
		"multExpr", "notExpr", "negationExpr", "atom", "var", "funcCall", "wsnFuncCall", 
		"wsnEvent", "paramList"
	};

	@Override
	public String getGrammarFileName() { return "awn1027.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }




	public awn1027Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); program();
			setState(67); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<FuncdefineContext> funcdefine() {
			return getRuleContexts(FuncdefineContext.class);
		}
		public List<ProcessDefContext> processDef() {
			return getRuleContexts(ProcessDefContext.class);
		}
		public FuncdefineContext funcdefine(int i) {
			return getRuleContext(FuncdefineContext.class,i);
		}
		public ProcessDefContext processDef(int i) {
			return getRuleContext(ProcessDefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(70); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(69); processDef();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(72); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATA) | (1L << INT) | (1L << IP) | (1L << BOOL) | (1L << VOID) | (1L << SETOF) | (1L << ID))) != 0)) {
				{
				{
				setState(74); funcdefine();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessDefContext extends ParserRuleContext {
		public ProcessTitleContext processTitle() {
			return getRuleContext(ProcessTitleContext.class,0);
		}
		public TerminalNode ASS() { return getToken(awn1027Parser.ASS, 0); }
		public EventExprContext eventExpr() {
			return getRuleContext(EventExprContext.class,0);
		}
		public ProcessDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterProcessDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitProcessDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitProcessDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessDefContext processDef() throws RecognitionException {
		ProcessDefContext _localctx = new ProcessDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_processDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); processTitle();
			setState(81); match(ASS);
			setState(82); eventExpr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessTitleContext extends ParserRuleContext {
		public ProcessTitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processTitle; }
	 
		public ProcessTitleContext() { }
		public void copyFrom(ProcessTitleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProcessTitle2Context extends ProcessTitleContext {
		public WsnEventContext wsnEvent() {
			return getRuleContext(WsnEventContext.class,0);
		}
		public ProcessTitle2Context(ProcessTitleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterProcessTitle2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitProcessTitle2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitProcessTitle2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ProcessTitle1Context extends ProcessTitleContext {
		public TerminalNode LB() { return getToken(awn1027Parser.LB, 0); }
		public TerminalNode RB() { return getToken(awn1027Parser.RB, 0); }
		public TerminalNode ID() { return getToken(awn1027Parser.ID, 0); }
		public ProcessTitle1Context(ProcessTitleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterProcessTitle1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitProcessTitle1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitProcessTitle1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessTitleContext processTitle() throws RecognitionException {
		ProcessTitleContext _localctx = new ProcessTitleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_processTitle);
		try {
			setState(88);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new ProcessTitle1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(84); match(ID);
				setState(85); match(LB);
				setState(86); match(RB);
				}
				break;
			case UNICAST:
			case BROADCAST:
			case GROUPCAST:
				_localctx = new ProcessTitle2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(87); wsnEvent();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventExprContext extends ParserRuleContext {
		public int _p;
		public EventExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public EventExprContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_eventExpr; }
	 
		public EventExprContext() { }
		public void copyFrom(EventExprContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class EventExpr3Context extends EventExprContext {
		public TerminalNode RBB() { return getToken(awn1027Parser.RBB, 0); }
		public OrExprContext orExpr() {
			return getRuleContext(OrExprContext.class,0);
		}
		public TerminalNode LBB() { return getToken(awn1027Parser.LBB, 0); }
		public EventExprContext eventExpr() {
			return getRuleContext(EventExprContext.class,0);
		}
		public EventExpr3Context(EventExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterEventExpr3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitEventExpr3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitEventExpr3(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EventExpr4Context extends EventExprContext {
		public EventExprContext eventExpr(int i) {
			return getRuleContext(EventExprContext.class,i);
		}
		public TerminalNode PARCOM() { return getToken(awn1027Parser.PARCOM, 0); }
		public List<EventExprContext> eventExpr() {
			return getRuleContexts(EventExprContext.class);
		}
		public EventExpr4Context(EventExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterEventExpr4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitEventExpr4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitEventExpr4(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EventExpr5Context extends EventExprContext {
		public ProcessTitleContext processTitle() {
			return getRuleContext(ProcessTitleContext.class,0);
		}
		public EventExpr5Context(EventExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterEventExpr5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitEventExpr5(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitEventExpr5(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EventExpr1Context extends EventExprContext {
		public TerminalNode RBBB() { return getToken(awn1027Parser.RBBB, 0); }
		public TerminalNode LBBB() { return getToken(awn1027Parser.LBBB, 0); }
		public FuncBlockContext funcBlock() {
			return getRuleContext(FuncBlockContext.class,0);
		}
		public EventExpr1Context(EventExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterEventExpr1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitEventExpr1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitEventExpr1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EventExpr2Context extends EventExprContext {
		public TerminalNode ARR() { return getToken(awn1027Parser.ARR, 0); }
		public EventExprContext eventExpr(int i) {
			return getRuleContext(EventExprContext.class,i);
		}
		public List<EventExprContext> eventExpr() {
			return getRuleContexts(EventExprContext.class);
		}
		public EventExpr2Context(EventExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterEventExpr2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitEventExpr2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitEventExpr2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventExprContext eventExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		EventExprContext _localctx = new EventExprContext(_ctx, _parentState, _p);
		EventExprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, RULE_eventExpr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			switch (_input.LA(1)) {
			case LBB:
				{
				_localctx = new EventExpr3Context(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(91); match(LBB);
				setState(92); orExpr();
				setState(93); match(RBB);
				setState(94); eventExpr(3);
				}
				break;
			case LBBB:
				{
				_localctx = new EventExpr1Context(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(96); match(LBBB);
				setState(97); funcBlock();
				setState(98); match(RBBB);
				}
				break;
			case UNICAST:
			case BROADCAST:
			case GROUPCAST:
			case ID:
				{
				_localctx = new EventExpr5Context(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(100); processTitle();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(109);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new EventExpr2Context(new EventExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_eventExpr);
						setState(103);
						if (!(4 >= _localctx._p)) throw new FailedPredicateException(this, "4 >= $_p");
						setState(104); match(ARR);
						setState(105); eventExpr(5);
						}
						break;

					case 2:
						{
						_localctx = new EventExpr4Context(new EventExprContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_eventExpr);
						setState(106);
						if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
						setState(107); match(PARCOM);
						setState(108); eventExpr(3);
						}
						break;
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FuncBlockContext extends ParserRuleContext {
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public FuncBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterFuncBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitFuncBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitFuncBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncBlockContext funcBlock() throws RecognitionException {
		FuncBlockContext _localctx = new FuncBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); stmtList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Type1Context extends TypeContext {
		public SetNameContext setName() {
			return getRuleContext(SetNameContext.class,0);
		}
		public Type1Context(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterType1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitType1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitType1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Type2Context extends TypeContext {
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public Type2Context(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterType2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitType2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitType2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			setState(118);
			switch (_input.LA(1)) {
			case SETOF:
				_localctx = new Type1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(116); setName();
				}
				break;
			case DATA:
			case INT:
			case IP:
			case BOOL:
			case VOID:
			case ID:
				_localctx = new Type2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117); typeName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetNameContext extends ParserRuleContext {
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public TerminalNode SETOF() { return getToken(awn1027Parser.SETOF, 0); }
		public SetNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).enterSetName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof awn1027Listener ) ((awn1027Listener)listener).exitSetName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof awn1027Visitor ) return ((awn1027Visitor<? extends T>)visitor).visitSetName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetNameContext setName() throws RecognitionException {
		SetNameContext _localctx = new SetNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_setName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); match(SETOF);
			setState(121); typeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
